--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
       <!-- endinjector -->
     <!-- endbuild -->
 </head>
-<body data-ng-app="ControlElectoralApp" class="{{ app.layout.sidebarTheme }} {{ app.layout.headerTheme }}">
+<body class="{{ app.layout.sidebarTheme }} {{ app.layout.headerTheme }}">
     <div data-ng-controller="AppCtrl" class="app {{$state.current.data.appClasses}}" data-ng-class="{'layout-small-menu': app.layout.isSmallSidebar, 'layout-chat-open': app.layout.isChatOpen, 'layout-fixed-header': app.layout.isFixedHeader, 'layout-boxed': app.layout.isBoxed, 'layout-static-sidebar': app.layout.isStaticSidebar, 'layout-right-sidebar': app.layout.isRightSidebar, 'layout-fixed-footer': app.layout.isFixedFooter, 'message-open': app.isMessageOpen}" data-ui-view="main">
     </div>
    <!-- <script type="text/javascript">window.user = <% user || 'null' %></script>-->
