cambios en frontend

--- a/app/index.html
+++ b/app/index.html
@@ -32,9 +32,9 @@
       <!-- bower:js -->
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
-    <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>    
     <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+    <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-animate/angular-animate.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-resource/angular-resource.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
@@ -46,6 +46,9 @@
     <script type="text/javascript" src="bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
     <script type="text/javascript" src="bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>  
     <script type="text/javascript" src="bower_components/ngstorage/ngStorage.min.js"></script>  
+    <script type="text/javascript" src="bower_components/angularUtils-pagination/dirPagination.js"></script>
+    <script type="text/javascript" src="bower_components/angular-translate/angular-translate.min.js"></script>
+    <script type="text/javascript" src="bower_components/angular-translate-loader-partial/angular-translate-loader-partial.min.js"></script>
         <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,client}) /app.js -->
