--- a/app/index.html
+++ b/app/index.html
@@ -57,9 +57,11 @@
     <script type="text/javascript" src="config.router.js"></script>
         <!-- injector:js -->
     <script type="text/javascript" src="scripts/controllers/app.main.js"></script>  
+     <script type="text/javascript" src="scripts/controllers/header.controller.js"></script>
     <script type="text/javascript" src="scripts/directives/navigation.js"></script>
     <script type="text/javascript" src="scripts/directives/offscreen.js"></script>
     <script type="text/javascript" src="scripts/directives/preloader.js"></script>
+    <script type="text/javascript" src="scripts/directives/matchpassword.js"></script>
         <!-- endinjector -->
     <!-- endbuild -->
 
