--- a/app/index.html
+++ b/app/index.html
@@ -15,12 +15,14 @@
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>   
         <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.min.css"/>  
         <link rel="stylesheet" href="bower_components/perfect-scrollbar/css/perfect-scrollbar.css">
+        <link rel="stylesheet" href="bower_components/angular-ui-tree/dist/angular-ui-tree.min.css">
        <!-- endbower -->
     <!-- endbuild -->
       <!-- build:css({.tmp,client}) app/app.css -->      
         <link rel="stylesheet" href="styles/themes/default/font-awesome.css">
         <link rel="stylesheet" href="styles/themes/default/urban.css">
         <link rel="stylesheet" href="styles/themes/default/urban.skins.css">
+        <link rel="stylesheet" href="styles/themes/default/base.css">
       <!-- endinjector -->
     <!-- endbuild -->
 </head>
@@ -49,6 +51,7 @@
     <script type="text/javascript" src="bower_components/angularUtils-pagination/dirPagination.js"></script>
     <script type="text/javascript" src="bower_components/angular-translate/angular-translate.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-translate-loader-partial/angular-translate-loader-partial.min.js"></script>
+    <script type="text/javascript" src="bower_components/angular-ui-tree/dist/angular-ui-tree.min.js"></script>
         <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,client}) /app.js -->
